fix(side-menu): fix collapse button dependent on wrong icon This could have caused a potential future issue, if the icon was changed. In a theme or otherwise.

--- a/tegel/src/components/side-menu/webcomponent/side-menu-collapse-button/side-menu-collapse-button.scss
+++ b/tegel/src/components/side-menu/webcomponent/side-menu-collapse-button/side-menu-collapse-button.scss
@@ -11,6 +11,8 @@
   .icon {
     transform: rotateZ(90deg);
     transition: all 0.2s ease-in-out;
+    width: 20px;
+    height: 20px;
   }
 
   .state-collapsed {
